# qt45wasm

./: .gitignore  Cargo.toml  FINDINGS.md  LICENSE  README.md
prompts/: generate.txt  generate_gpu.txt  generate_simd.txt  retry.txt  retry_gpu.txt  retry_simd.txt  system.txt  system_gpu.txt  system_simd.txt  test_gen.txt  test_gen_simd.txt
src/: bench.rs  gpu.rs  lib.rs  llm.rs  main.rs  runtime.rs  search.rs  store.rs  types.rs
