[package]
name = "qt45"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rusqlite = { version = "0.38", features = ["bundled-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = "41.0"
fastembed = "5"
sqlite-vec = "0.1"
zerocopy = "0.8"
wgpu = "28"
pollster = "0.4"
